# rtfm

./: .gitignore  README.md  pyproject.toml
.claude/: mcp.json
cli/: main.py
config/: settings.py
docs/: plan.md
mcp_server/: server.py
rtfm/embeddings/: base.py  local.py
rtfm/ingestion/: base.py  chunker.py  epub_parser.py  pdf_parser.py  pipeline.py
rtfm/models/: schemas.py
rtfm/retrieval/: retriever.py
rtfm/storage/: base.py  chroma.py
tests/: conftest.py  test_chunker.py  test_embeddings.py  test_epub_parser.py  test_pdf_parser.py  test_pipeline.py  test_retrieval.py  test_schemas.py  test_storage.py
