[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtfm"
version = "0.1.0"
description = "Technical Book RAG System — ingest, embed, and retrieve knowledge from engineering books"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "mcp[cli]>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
rtfm = "cli.main:app"
rtfm-mcp = "mcp_server.server:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["rtfm*", "cli*", "config*", "mcp_server*"]
